--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "start": "meteor run"
   },
   "dependencies": {
-    "babel-runtime": "6.26.0",
+    "@babel/runtime": "7.0.0-beta.55",
+    "babel-runtime": "^6.26.0",
     "core-js": "2.5.7",
     "meteor-node-stubs": "0.4.1",
     "react": "15.6.2",
-    "react-dom": "15.6.2"
+    "react-dom": "15.6.2",
+    "react-router-dom": "^4.3.1"
   }
 }
