--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "babel-runtime": "^6.26.0",
     "core-js": "2.5.7",
     "meteor-node-stubs": "0.4.1",
-    "react": "15.6.2",
-    "react-dom": "15.6.2",
-    "react-router-dom": "^4.3.1"
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
+    "react-router-dom": "^4.3.1",
+    "simpl-schema": "^1.5.3",
+    "uniforms": "^1.25.0",
+    "uniforms-unstyled": "^1.25.0"
   }
 }
