--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "meteor-node-stubs": "0.4.1",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
+    "react-router": "^4.3.1",
+    "react-router-auth": "^1.0.1",
     "react-router-dom": "^4.3.1",
     "simpl-schema": "^1.5.3",
     "uniforms": "^1.25.0",
