--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "meteor-node-stubs": "0.4.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-meteor-data": "^0.2.11",
     "react-router": "^4.3.1",
     "react-router-auth": "^1.0.1",
     "react-router-dom": "^4.3.1",
